# repo-to-text-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_test.py
src/repo_to_text/: cli.py  core.py  utils.py
src/repo_to_text_ai/: cli.py  core.py  scanner.py  utils.py
tests/: test_main.py  test_scanner.py
